--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   "dependencies": {
     "@discordjs/builders": "^1.7.0",
     "@discordjs/rest": "^2.2.0",
+    "@discordjs/voice": "^0.16.1",
     "@types/node": "^20.12.7",
     "discord-api-types": "^0.37.82",
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.5",
     "esbuild": "^0.20.2",
+    "moment": "^2.30.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   }
